<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardElevation="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="16dp"
    android:layout_marginBottom="8dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangleblack"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans"
            android:text="@string/user_age"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans"
            android:text="@string/user_job"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans"
            android:text="@string/user_gender"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/row_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:fontFamily="@font/openregular"
            android:singleLine="true"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_body1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/row_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/openregular"
            android:singleLine="true"
            android:text="@string/user_age"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_body1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/row_name"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/row_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/openregular"
            android:singleLine="true"

            android:text="@string/user_job"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_body1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/row_age"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/row_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/openregular"
            android:singleLine="true"
            android:text="@string/user_gender"
            android:textColor="@color/black"
            android:textSize="@dimen/material_text_body1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/row_job"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
